tests/compile_fail/invalid_precedence_newtype_literal.rs
use surgeist_style::{LayerOrder, SourceOrder};

fn main() {
    let _layer = LayerOrder(2);
    let _source = SourceOrder(3);
}
